# fastmcp-playground

./: .env.example  .gitignore  README.md  pyproject.toml  test_my_tools.py
app/: __init__.py  __main__.py  config.py  logger.py
docs/: demo.md  env.md  health.md  logs.txt  overview.md  server.md  tooling.md
tests/: test_tools.py
