[project]
name = "fastmcp-playground"
version = "0.1.0"
description = "A playground project for learning and experimenting with fastMCP."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.11.3",
    "httpx>=0.28.1",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.1",
    "ruff>=0.12.9",
]
